restructuring and rephrasing partially

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -208,12 +208,18 @@ Transactional updates in general support several reboot methods.
 It is recommended to use [systemitem]``systemd`` for rebooting in systems managed by {productname}.
 Using other methods can lead to undesired behavior.
 
-By default, the reboot method is set to [option]``auto``.
-[command]``rebootmgrd`` will be used to reboot the system according to the configured policies if the service is running, otherwise systemctl reboot will be called.
-
 When bootstraping a transactional system on {productname}, [systemitem]``systemd`` will be configured as the reboot method ([literal]``REBOOT_METHOD``), if the system is in its default configuration.
-The idea behind this strategy is to put Suma on control of the reboot action, considering that systemd should perform the reboot immediately.
+Such a configuration allows {productname} to control the reboot action, and rebooting can be performed immediately or scheduled with {productname} as wanted.
 
+
+=== Background Information
+
+By default, the reboot method during client installation is set to [option]``auto``.
+With the [option]``auto`` boot method, [command]``rebootmgrd`` will be used to reboot the system according to the configured policies if the service is running.
+Otherwise [command]``systemctl reboot`` will be called.
+
+////
 Otherwise, the only thing Suma will be able to do is to ask for a reboot and it will be managed in the peculiarities of each reboot method. Not having control of when the reboot should happen, also takes away from Suma the ability to perform the reboot on its own maintenance windows, which is not the ideal configuration.
 
 The user must be able to change reboot method at any time and SUSE Manager will keep it. But in this case we should alert in the documentation that using any method different from systemd may cause undesired behavior.
+////
