--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -7,7 +7,7 @@ The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
 
 Salt clients now use GPG key information entered for a software channel to manage the trusted keys.
-When a software channel with GPG key information is assigned to a client, the key is trusted when the channel is refreshed or the first package is installed from the channel.
+When a software channel with GPG key information is assigned to a client, the key is trusted when the channel is refreshed or the first package is installed from this channel.
 
 The GPG key URL parameter in the software channel page can contain multiple key URLs separated by "whitespace".
 In case it is a file URL, the GPG key file must be deployed on the client before the software channel is used.
