--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -152,7 +152,7 @@ You also need less manual interaction with your system after registration.
 
 .Bootstrapping LTSS clients
 
-If you are boostrapping clients with LTSS subscription, make sure the LTSS chanells are included in your activation key during its creation.
+If you are boostrapping clients with LTSS subscription, include the LTSS channels during activation key creation.
 
 
 .Bandwidth Requirements
