Reminder for customers to include LTSS in activation keys (#2235)
* Added instriction about LTSS clients and activation keys.

* Update .changelog

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/client-configuration/pages/activation-keys.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -150,6 +150,11 @@ If you are using bootstrap scripts, consider creating an activation key for each
 This helps you align channel assignments, package installation, system group memberships, and configuration channel assignments.
 You also need less manual interaction with your system after registration.
 
+.Bootstrapping LTSS clients
+
+If you are boostrapping clients with LTSS subscription, include the LTSS channels during activation key creation.
+
+
 .Bandwidth Requirements
 
 Using activation keys might result in automatic downloading of software at registration time, which might not be desirable in environments where bandwidth is constrained.
