cosmetic https://github.com/SUSE/spacewalk/issues/16856

--- a/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
@@ -1,4 +1,4 @@
-[server-major-upgrade]
+[[server-major-upgrade]]
 = Server - Major Upgrade
 
 When {productname} core components are upgraded to new major versions, you need to perform a major upgrade on the {productname} Server.
