--- a/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -1,4 +1,4 @@
-[server-minor-upgrade]
+[[server-minor-upgrade]]
 = Server - Minor Upgrade
 
 Several times a year, the {productname} team releases minor upgrades of the {productname} Server.
@@ -51,7 +51,7 @@ SUSE Manager uses [command]``zypper patch``, but Uyuni requires [command]``zyppe
 ====
 +
 
-. If zypper reports that the Uyuni package won't be upgraded, run the command manually:
+. If zypper reports that the Uyuni package will not be upgraded, run the command manually:
 +
 
 ----
