add note about postgres user
https://github.com/uyuni-project/uyuni-docs/issues/2013
https://github.com/SUSE/spacewalk/issues/20268

--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -59,6 +59,17 @@ A regular upgrade will copy the database files instead of creating hard links be
 
 PostgreSQL stores data at [path]``/var/lib/pgsql/data/``.
 
+[NOTE]
+====
+Before running the DB upgrade make sure that the PostgreSQL user exists on the system.
+The [path]``/etc/passwd`` entry  should look as follows:
+
+----
+postgres:x:26:26:PostgreSQL Server:/var/lib/pgsql:/bin/bash
+----
+====
+
+
 
 .Procedure: Performing a Regular Upgrade
 . Perform a database backup.
