Add clarification between self-installed and cloud instances
Signed-off-by: Miguel Sama <miguel.sama@suse.com>

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -144,6 +144,14 @@ The root user on {ubuntu} is disabled by default for SSH access.
 
 To be able to onboard using a regular user, you need to edit the [filename]``sudoers`` file.
 
+[NOTE]
+====
+This issue happens with self-installed versions of {ubuntu} since if the default user has been granted with administrative privileges
+during installation time, it will requiere a password to perform privilege escalation using [command]``sudo``.
+With cloud instances this normally doesn't happen since [command]``cloud-init`` creates automatically a file under [path]``/etc/sudoers.d`` 
+which grants privilege escalation through [command]``sudo`` without the need of a password.
+====
+
 .Procedure: Granting Root User Access
 
 . On the client, edit the [filename]``sudoers`` file:
