--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -146,10 +146,9 @@ To be able to onboard using a regular user, you need to edit the [filename]``sud
 
 [NOTE]
 ====
-This issue happens with self-installed versions of {ubuntu} since if the default user has been granted with administrative privileges
-during installation time, it will requiere a password to perform privilege escalation using [command]``sudo``.
-With cloud instances this normally doesn't happen since [command]``cloud-init`` creates automatically a file under [path]``/etc/sudoers.d`` 
-which grants privilege escalation through [command]``sudo`` without the need of a password.
+This issue happens with self-installed versions of {ubuntu}.
+If the default user has been granted administrative privileges during installation time, a password is requiered to perform privilege escalation using [command]``sudo``.
+With cloud instances this does not happen since [command]``cloud-init`` automatically creates a file under [path]``/etc/sudoers.d`` and grants privilege escalation through [command]``sudo`` without the need for a password.
 ====
 
 .Procedure: Granting Root User Access
