--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -75,23 +75,30 @@ The key has a file extension of [path]``.key``.
 .Procedure: Copying Certificates to the Server
 . Copy your entitlement certificate and key from the client system, to your workstation:
 +
+
 Amazon EC2::
 +
+
 ----
 cp /etc/pki/rhui/product/content-<version>.crt /<example>/entitlement/
 cp /etc/pki/rhui/content-<version>.key /<example>/entitlement/
 ----
 +
+
 Azure::
 +
+
 * Check the certificate chain using the command:
 +
+
 ----
 openssl s_client -connect rhui-1.microsoft.com:443 -showcerts
 ----
 +
-* A sample output will look like the following:
+
+A sample output will look like the following:
 +
+
 ----
 CONNECTED(00000003)
 depth=2 C = US, O = DigiCert Inc, OU = www.digicert.com, CN = DigiCert Global Root G2
@@ -101,37 +108,49 @@ verify return:1
 depth=0 C = US, ST = WA, L = Redmond, O = Microsoft Corporation, CN = rhui-1.microsoft.com
 verify return+
 ----
++
+
 * Check the second certificate ([literal]``CN = Microsoft Azure``), if it is the same on your VM, note the certificate name.
 Refer to the https://docs.microsoft.com/en-us/azure/active-directory/fundamentals/certificate-authorities to download the certificate.
 Click the AIA link to download the certificate.
 The certificate will be downloaded with the [literal]``.cer`` suffix.
 Convert it to [literal]``.crt`` with the command:
 +
+
 ----
 openssl x509 -inform DER -in <example.cer> -out <example.crt>
 ----
 +
+
 Google Cloud Platform::
 +
+
 ----
 cp /etc/pki/rhui/product/content.crt /<example>/entitlement/
 cp /etc/pki/rhui/key.pem /<example>/entitlement/
 ----
 +
+
 . Copy the {redhat} CA Certificate file from the client system, to the same location as the entitlement certificate and key:
 +
+
 Amazon EC2::
 +
+
 ----
 cp /etc/pki/rhui/cdn.redhat.com-chain.crt /<example>/entitlement
 ----
 +
+
 Azure::
 +
+
 * Upload the converted certifcate to /<example>/entitlement
 +
+
 Google Cloud Platform::
 +
+
 ----
 cp /etc/pki/rhui/ca.crt /<example>/entitlement
 ----
@@ -139,7 +158,6 @@ cp /etc/pki/rhui/ca.crt /<example>/entitlement
 
 To manage repositories on your {redhat} client, you need to import the CA and entitlement certificates to the {productname} Server.
 This requires that you perform the import procedure three times, to create three entries: one each for the entitlement certificate, the entitlement key, and the {redhat} certificate.
-
 
 
 .Procedure: Importing Certificates to the Server
