Moving troubleshooting section.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -85,6 +85,7 @@ endif::[]
 *** xref:troubleshooting/tshoot-packages.adoc[Packages]
 *** xref:troubleshooting/tshoot-packages-proxy.adoc[Proxy Cache Repository]
 *** xref:troubleshooting/tshoot-passing-grains-to-start-event.adoc[Passing Grains to a Start Event]
+*** xref:troubleshooting/tshoot-payg.adoc[{payg}]
 *** xref:troubleshooting/tshoot-proxy-connections-and-fqdns.adoc[Proxy Connections and FQDN]
 *** xref:troubleshooting/tshoot-registerclones.adoc[Registering Cloned Clients]
 *** xref:troubleshooting/tshoot-delclients.adoc[Registering Deleted Clients]
