make use of provided feedback.

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -216,8 +216,16 @@ Such a configuration allows {productname} to control the reboot action, and rebo
 
 By default, the reboot method during client installation is set to [option]``auto``.
 With the [option]``auto`` boot method, [command]``rebootmgrd`` will be used to reboot the system according to the configured policies if the service is running.
-Otherwise [command]``systemctl reboot`` will be called.
+Policies can be to reboot instantly or during a maintenance window.
+For more information, see the [command]``rebootmgrd``(8) man page.
+Otherwise if [command]``rebootmgrd`` is not running, {productname} will call [command]``systemctl reboot``.
 
+[[NOTE]]
+====
+Using any method different from [command]``systemd`` may cause undesired behavior.
+
+// 2023-05-23, ke: The rest is commented and the user will not see the
+//                 following remarks/background info:
 ////
 Otherwise, the only thing Suma will be able to do is to ask for a reboot and it will be managed in the peculiarities of each reboot method. Not having control of when the reboot should happen, also takes away from Suma the ability to perform the reboot on its own maintenance windows, which is not the ideal configuration.
 
