backport43 - Add clarification between self-installed and cloud instances for Ubuntu 18.

--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -219,6 +219,13 @@ The root user on {ubuntu} is disabled by default for SSH access.
 
 To be able to onboard using a regular user, you need to edit the [filename]``sudoers`` file.
 
+[NOTE]
+====
+This issue happens with self-installed versions of {ubuntu}.
+If the default user has been granted administrative privileges during installation time, a password is requiered to perform privilege escalation using [command]``sudo``.
+With cloud instances this does not happen because [command]``cloud-init`` automatically creates a file under [path]``/etc/sudoers.d`` and grants privilege escalation through [command]``sudo`` without the need for a password.
+====
+
 .Procedure: Granting Root User Access
 
 . On the client, edit the [filename]``sudoers`` file:
