--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -228,6 +228,13 @@ The root user on {ubuntu} is disabled by default for SSH access.
 
 To be able to onboard using a regular user, you need to edit the [filename]``sudoers`` file.
 
+[NOTE]
+====
+This issue happens with self-installed versions of {ubuntu}.
+If the default user has been granted administrative privileges during installation time, a password is requiered to perform privilege escalation using [command]``sudo``.
+With cloud instances this does not happen because [command]``cloud-init`` automatically creates a file under [path]``/etc/sudoers.d`` and grants privilege escalation through [command]``sudo`` without the need for a password.
+====
+
 .Procedure: Granting Root User Access
 
 . On the client, edit the [filename]``sudoers`` file:
@@ -271,10 +278,10 @@ For more information on registering your clients, see xref:client-configuration:
 
 With default configuration settings, the installation of [package]``spacecmd`` may fail with:
 
-====
+----
 The following packages have unmet dependencies:
     spacecmd : Depends: python3-rpm but it is not installable
-====
+----
 
 
 [package]``python3-rpm`` is part of the {ubuntu} universe repositories.
