--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -85,6 +85,7 @@ endif::[]
 *** xref:troubleshooting/tshoot-packages.adoc[Package Inconsistencies]
 *** xref:troubleshooting/tshoot-packages-proxy.adoc[Repository Via Proxy Issues]
 *** xref:troubleshooting/tshoot-passing-grains-to-start-event.adoc[Passing Grains to a Start Event]
+*** xref:troubleshooting/tshoot-payg.adoc[{payg}]
 *** xref:troubleshooting/tshoot-proxy-connections-and-fqdns.adoc[Proxy Connections and FQDN]
 *** xref:troubleshooting/tshoot-registerclones.adoc[Registering Cloned Clients]
 *** xref:troubleshooting/tshoot-reg-from-webui-fails-no-errors.adoc[Registration from {webui} fails and does not show any errors]
