backport43 - Moving troubleshooting section.

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -144,3 +144,5 @@ Any of the following actions or changes in the {payg} instance will lead to cred
 * removing the imported certificates
 * removing cloud-specific entries from [path]``/etc/hosts``
 ====
+
+For more about troubleshooting {payg}, see xref:administration:troubleshooting/tshoot-payg.adoc[].
