Tidy up of the existing content.

--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -205,13 +205,15 @@ tail -f /var/log/rhn/reposync/<CHANNEL_NAME>.log
 When the channel synchronization process is complete, you can continue with client registration.
 For more instructions, see xref:client-configuration:registration-overview.adoc[].
 
+
+
 == Set up {productname} with external database
 
 In this example, we use RDS product from Amazon Web Service.
 
 [WARNING]
 ====
-Currently, configuring an external database is not supported by yast2 setup.
+Currently, configuring an external database is not supported by [literal]``yast2`` setup.
 
 You can configure an external database using the [command]``mgr-setup`` command line tool.
 
@@ -219,11 +221,10 @@ You can configure an external database using the [command]``mgr-setup`` command 
 This section guides you through {productname} setup using [command]``mgr-setup``.
 
 .Procedure : Configuring server with external database
-. First create a [path]``setup_env.sh`` file in the [path]``/root`` directory defining the server setup.
-  The details are explained in the following steps.
+. Create [path]``setup_env.sh`` file in the [path]``/root`` directory.
 
 . Set the variables defining your certificate information and password.
-The information is the same as explained at <<proc-quickstart-certificate-information-yast>>.
+  For more information about certificates, see <<proc-quickstart-certificate-information-yast>>.
 +
 
 ----
@@ -239,8 +240,8 @@ USE_EXISTING_CERTS="N"
 +
 
 . Define your database.
-The user and password will be created during the setup.
-If you are using an external database, specify the hostname and port.
+  The user and password are created during the setup.
+  If you are using an external database, specify the hostname and port.
 +
 
 ----
@@ -255,7 +256,7 @@ MANAGER_ENABLE_TFTP="Y"
 ----
 +
 
-. Set the variables defining the specific configuration for the external database.
+. Set up the variables defining the specific configuration for the external database.
   In this scenario, an RDS database has been deployed and is accessible by the server.
   To establish a connection, an AWS certificate is also required.
   [literal]``EXTERNALDB_ADMIN_USER`` and [literal]``EXTERNALDB_ADMIN_PASS`` are the credentials set during the RDS deployment:
@@ -268,6 +269,12 @@ MANAGER_DB_CA_CERT="/path_to/aws.crt"
 REPORT_DB_CA_CERT="/path_to/aws.crt"
 EXTERNALDB_PROVIDER="aws"
 ----
++
+
+[NOTE]
+====
+The AWS certificate can be found at link:https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html[].
+====
 +
 
 . To connect to the external database, configure the report database with the RDS hostname and port.
@@ -286,11 +293,4 @@ REPORT_DB_PASS="pythia_susemanager"
 [WARNING]
 ====
 Do not use [literal]``MANAGER_USER`` as the user when deploying RDS.
-====
-+
-
-[NOTE]
-.Getting AWS certificate
-====
-The certificate can be found at link:https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html[].
 ====
