--- a/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
@@ -1,16 +1,18 @@
-[[server-minor-upgrade]]
-= Server - Minor Upgrade
+[[server-upgrade]]
+= Server - Upgrade
 
-Several times a year, the {productname} team releases minor upgrades of the {productname} Server.
+Several times a year, the {productname} team releases upgrades of the {productname} Server.
 These updates address bug fixes and feature improvements, and sometimes include new features.
 
 [IMPORTANT]
 ====
 Some additional manual steps might be required, and this information is only available in the release notes.
-For important extra information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
+For more information about such a major upgrade, see xref:installation-and-upgrade:server-major-upgrade-uyuni.adoc[].
+
+For extra information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
 ====
 
-Performing a minor upgrade is similar to installing operating system package updates.
+Performing an upgrade is similar to installing operating system package updates.
 
 .Procedure: Updating Packages on the {productname} Server
 
