update versioning for postgresql, leap and salt

--- a/modules/installation-and-upgrade/pages/db-intro.adoc
+++ b/modules/installation-and-upgrade/pages/db-intro.adoc
@@ -57,6 +57,10 @@ This table shows the PostgreSQL version required for each version of {productnam
 | {productname} >= 2022.06
 | {opensuse} 15.4
 | PostgreSQL 14
+
+| {productname} >= 2023.06
+| {opensuse} 15.5
+| PostgreSQL 15
 |===
 endif::[]
 
