Remove traditional client notes where they appeared while changing the RHEL docs

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -1,10 +1,7 @@
 [[clients-centos]]
 = Registering {centos} Clients
 
-This section contains information about registering traditional and Salt clients running {centos} operating systems.
-
-Traditional clients are not available on {centos}{nbsp}8.
-{centos}{nbsp}8 clients are only supported as Salt clients.
+This section contains information about registering Salt clients running {centos} operating systems.
 
 [IMPORTANT]
 ====
@@ -48,13 +45,6 @@ For example, when working with `x86_64` architecture, you need this products:
 
 |===
 
-//[NOTE]
-//====
-//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {centos} 6 clients using these packages will fail.
-//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
-
 include::snippets/addchannels_vendor_webui.adoc[]
 
 Alternatively, you can add channels at the command prompt.
@@ -69,13 +59,6 @@ The channels you need for this procedure are:
 | {centos} 7 | centos7-x86_64
 
 |===
-
-//[NOTE]
-//====
-//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {centos} 6 clients using these packages will fail.
-//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
@@ -92,13 +75,6 @@ The channels you need for this procedure are:
 | OS Version | Base Channel | Client Channel       | Updates/Appstream Channel
 | {centos} 7 | centos7      | centos7-uyuni-client | centos7-updates
 |===
-
-//[NOTE]
-//====
-//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {centos} 6 clients using these packages will fail.
-//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
 
 include::snippets/addchannels_novendor_cli_multiarch.adoc[]
 
@@ -173,13 +149,6 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 include::snippets/create_bootstrap_repo_register.adoc[]
 
-
-
-//[WARNING]
-//====
-//To register and use {centos}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-//====
 
 
 
