--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -6,10 +6,7 @@ ifeval::[{suma-content} == true]
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use {redhat} sources to retrieve and update packages.
 endif::[]
 
-This section contains information about using the {redhat} content delivery network (CDN) to register traditional and Salt clients running {rhel} operating systems.
-
-Traditional clients are available on {rhel}{nbsp}7 only.
-{rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
+This section contains information about using the {redhat} content delivery network (CDN) to register Salt clients running {rhel} operating systems.
 
 For information about using {redhat} update infrastructure (RHUI) instead, see xref:client-configuration:clients-rh-rhui.adoc[].
 
@@ -25,8 +22,6 @@ You are responsible for arranging access to {redhat} base media repositories and
 You must obtain support from {redhat} for all your {rhela} systems.
 If you do not do this, you might be violating your terms with {redhat}.
 ====
-
-
 
 == Import Entitlements and Certificates
 
@@ -69,7 +64,6 @@ To avoid disruption, you need to repeat this process at the end of every support
 {redhat} supplies the subscription-manager tool to manage subscription assignments.
 It runs locally on the client system to track installed products and subscriptions.
 Register to redhat.com with subscription-manager, then follow this procedure to obtain certificates.
-
 
 
 .Procedure: Registering Clients to Subscription Manager
@@ -149,7 +143,7 @@ ifeval::[{suma-content} == true]
 
 Your {susemgr} subscription entitles you to the tools channels for {sleses} (also known as {redhat} Expanded Support or RES).
 You must use the client tools channel to create the bootstrap repository.
-This procedure applies to both Salt and traditional clients.
+This procedure applies to Salt clients.
 endif::[]
 
 ifeval::[{suma-content} == true]
