--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -58,8 +58,7 @@ After a client has completed onboarding, you can add local repositories to these
 ifeval::[{suma-content} == true]
 | {sles} {es} | [path]``/etc/yum.repos.d/``
 endif::[]
-| {rhel} | [path]``/etc/yum.repos.d/``
-| {centos} | [path]``/etc/yum.repos.d/``
+| {rhel} and similar derivatives | [path]``/etc/yum.repos.d/``
 | {ubuntu} | [path]``/etc/apt/sources.list.d/``
 | {debian} | [path]``/etc/apt/sources.list.d/``
 
