--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -15,10 +15,9 @@ The operating system you run on a client is supported by the organization that s
 
 The icons in this table indicate:
 
-* {check} the feature is available on both Salt and traditional clients
+* {check} the feature is available on Salt clients
 * {cross} the feature is not available
 * {question} the feature is under consideration, and may or may not be made available at a later date
-* {trad} the feature is supported only on traditional clients
 * {salt} the feature is supported only on Salt clients.
 
 
@@ -72,7 +71,7 @@ The icons in this table indicate:
 | {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
-| {trad}
+| {cross}
 
 | Virtual Guest Installation (image template), as Host OS
 | {check}
@@ -84,7 +83,7 @@ The icons in this table indicate:
 | {check}
 
 | Contact methods
-| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
+| {salt}: ZeroMQ, Salt-SSH
 
 | Works with {productname} Proxy
 | {check}
@@ -105,25 +104,25 @@ The icons in this table indicate:
 | {check}
 
 | Package verification
-| {trad}
+| {cross}
 
 | Package locking
 | {check}
 
 | System locking
-| {trad}
+| {cross}
 
 | Maintenance Windows
 | {check}
 
 | System snapshot
-| {trad}
+| {cross}
 
 | Configuration file management
 | {check}
 
 | Snapshots and profiles
-| {trad}. {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
 
 | Power management
 | {check}
