--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -20,10 +20,9 @@ The operating system you run on a client is supported by the organization that s
 
 The icons in this table indicate:
 
-* {check} the feature is available on both Salt and traditional clients
+* {check} the feature is available on Salt clients
 * {cross} the feature is not available
 * {question} the feature is under consideration, and may or may not be made available at a later date
-* {trad} the feature is supported only on traditional clients
 * {salt} the feature is supported only on Salt clients.
 
 
@@ -107,7 +106,7 @@ The icons in this table indicate:
 | {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
-| {trad}
+| {cross}
 | {cross}
 | {cross}
 
@@ -127,7 +126,7 @@ The icons in this table indicate:
 | {salt}
 
 | Contact methods
-| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
+| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 
@@ -162,7 +161,7 @@ The icons in this table indicate:
 | {salt}
 
 | Package verification
-| {trad}
+| {cross}
 | {cross}
 | {cross}
 
@@ -172,7 +171,7 @@ The icons in this table indicate:
 | {question}
 
 | System locking
-| {trad}
+| {cross}
 | {cross}
 | {cross}
 
@@ -182,7 +181,7 @@ The icons in this table indicate:
 | {check}
 
 | System snapshot
-| {trad}
+| {cross}
 | {cross}
 | {cross}
 
@@ -192,7 +191,7 @@ The icons in this table indicate:
 | {salt}
 
 | Snapshots and profiles
-| {trad}. {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
 
