--- a/modules/client-configuration/pages/supported-features-rocky.adoc
+++ b/modules/client-configuration/pages/supported-features-rocky.adoc
@@ -15,10 +15,9 @@ The operating system you run on a client is supported by the organization that s
 
 The icons in this table indicate:
 
-* {check} the feature is available on both Salt and traditional clients
+* {check} the feature is available on Salt clients
 * {cross} the feature is not available
 * {question} the feature is under consideration, and may or may not be made available at a later date
-* {trad} the feature is supported only on traditional clients
 * {salt} the feature is supported only on Salt clients.
 
 
