--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -2,18 +2,14 @@
 = Supported Clients and Features
 
 {productname} is compatible with a range of client technologies.
-You can install traditional or Salt clients, running {sle} or another Linux operating system, with a range of hardware options.
+You can install Salt clients running {sle} or another Linux operating system, with a range of hardware options.
 
 This section contains summary of supported client systems. For a detailed list of features available on each client, see the following pages.
-
-include::snippets/traditional_client_warning.adoc[]
-
-
 
 [[supported-features-clients]]
 == Supported Client Systems
 
-Supported operating systems for traditional and Salt clients are listed in this table.
+Supported operating systems for Salt clients are listed in this table.
 
 The icons in this table indicate:
 
@@ -41,142 +37,115 @@ The operating system running on a client is supported by the organization that s
 
 ifeval::[{suma-content} == true]
 [[mgr.support.clients]]
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1", options="header"]
 .Supported Client Systems
 |===
 | Operating System
 | Architecture
-| Traditional Clients
 | Salt Clients
-
-| {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
-| {check}
-| {check}
 
 | {sle} 12
 | {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
-| {check}
 
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
 
 | {sles} for SAP 12
 | {x86_64}, {ppc64le}
 | {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
 | {check}
 
 | {micro}
 | {x86_64}, {ppc64le}, {aarch64}
-| {cross}
 | {check}
 
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
-| {check}
 
 | {sll} 9
 | {x86_64}
-| {cross}
-| {check}
-
-| {sles} ES 8
-| {x86_64}
-| {cross}
 | {check}
 
 | {sles} ES 7
 | {x86_64}
 | {check}
-| {check}
 
-| {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {cross}
+| {sles} ES 8
+| {x86_64}
 | {check}
 
 | {almalinux} 8
 | {x86_64}, {aarch64}
-| {cross}
+| {check}
+
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {amazon} 2
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {centos} 7
 | {x86_64}, {aarch64}
 | {check}
+
+| {debian} 10
+| {x86_64}
 | {check}
 
 | {debian} 11
 | {x86_64}
-| {cross}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
 | {check}
 
-| {rhel} 9
-| {x86_64}
-| {cross}
-| {check}
-
-| {rhel} 8
-| {x86_64}
-| {cross}
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {check}
 
 | {rhel} 7
 | {x86_64}
 | {check}
+
+| {rhel} 8
+| {x86_64}
 | {check}
 
-| {rocky} 9
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
-| {cross}
+| {rhel} 9
+| {x86_64}
 | {check}
 
 | {rocky} 8
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
-| {ubuntu} 22.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {cross}
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
 | {check}
 
 | {ubuntu} 18.04
 | {amd64}
-| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {amd64}
+| {check}
+
+| {ubuntu} 22.04
+| {amd64}
 | {check}
 
 |===
@@ -185,151 +154,123 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 [[uyuni.supported.clients]]
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1", options="header"]
 .Supported Client Systems
 |===
 
 | Operating System
 | Architecture
-| Traditional Clients
 | Salt Clients
-
-| {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
-| {check}
-| {check}
 
 | {sle} 12
 | {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
-| {check}
 
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
 
 | {sles} for SAP 12
 | {x86_64}, {ppc64le}
 | {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
 | {check}
 
 | {micro}
 | {x86_64}, {ppc64le}, {aarch64}
-| {cross}
 | {check}
 
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
-| {check}
-
-// SUSE Liberty Linux not available at Uyuni for now
-//| {sll} 9
-//| {x86_64}
-//| {cross}
-//| {check}
-
-// SUSE Liberty Linux not available at Uyuni for now
-//| {sles} ES 8
-//| {x86_64}
-//| {cross}
-//| {check}
 
 // SUSE Liberty Linux not available at Uyuni for now
 //| {sles} ES 7
 //| {x86_64}
 //| {check}
+
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sles} ES 8
+//| {x86_64}
+//| {check}
+
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sll} 9
+//| {x86_64}
 //| {check}
 
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {cross}
 | {check}
 
 | {almalinux} 8
 | {x86_64}, {aarch64}
-| {cross}
+| {check}
+
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {amazon} 2
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {centos} 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
+
+| {debian} 10
+| {x86_64}
 | {check}
 
 | {debian} 11
 | {x86_64}
-| {cross}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
 | {check}
 
-| {rhel} 9
-| {x86_64}
-| {cross}
-| {check}
-
-| {rhel} 8
-| {x86_64}
-| {cross}
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {check}
 
 | {rhel} 7
 | {x86_64}
 | {check}
+
+| {rhel} 8
+| {x86_64}
 | {check}
 
-| {rocky} 9
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
-| {cross}
+| {rhel} 9
+| {x86_64}
 | {check}
 
 | {rocky} 8
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
-| {ubuntu} 22.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {cross}
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
 | {check}
 
 | {ubuntu} 18.04
 | {amd64}
-| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {amd64}
+| {check}
+
+| {ubuntu} 22.04
+| {amd64}
 | {check}
 
 |===
