--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -1,7 +1,7 @@
 [[installation-client-requirements]]
 = Supported Client Systems
 
-Supported operating systems for traditional and Salt clients are listed in this table.
+Supported operating systems for Salt clients are listed in this table.
 
 In this table, {check} indicates that clients running the operating system are supported by {suse}, and {cross} indicates that it is not supported.
 Fields marked as {question} are under consideration, and may or may not be supported at a later date.
@@ -20,127 +20,103 @@ For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only
 
 ifeval::[{suma-content} == true]
 [[mgr.support.clients]]
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1", options="header"]
 .Supported Client Systems
 |===
 | Operating System
 | Architecture
-| Traditional Clients
 | Salt Clients
-
-| {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
-| {check}
-| {check}
 
 | {sle} 12
 | {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
-| {check}
 
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
 
 | {sles} for SAP 12
 | {x86_64}, {ppc64le}
 | {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
 | {check}
 
 | {micro}
 | {x86_64}, {ppc64le}, {aarch64}
-| {cross}
 | {check}
 
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
-| {check}
-
-| {sles} ES 8
-| {x86_64}
-| {cross}
-| {check}
 
 | {sles} ES 7
 | {x86_64}
 | {check}
+
+| {sles} ES 8
+| {x86_64}
 | {check}
 
 | {almalinux} 8
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {amazon} 2
 | {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {centos} 8
-| {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {centos} 7
 | {x86_64}, {aarch64}
 | {check}
-| {check}
 
-| {debian} 11
-| {x86_64}
-| {cross}
+| {centos} 8
+| {x86_64}, {aarch64}
 | {check}
 
 | {debian} 10
 | {x86_64}
-| {cross}
 | {check}
 
-| {oracle} 9
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
+| {debian} 11
+| {x86_64}
 | {check}
 
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
 | {check}
 
-| {rhel} 8
-| {x86_64}
-| {cross}
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {check}
 
 | {rhel} 7
 | {x86_64}
 | {check}
+
+| {rhel} 8
+| {x86_64}
 | {check}
 
 | {rocky} 8
 | {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {ubuntu} 22.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {cross}
 | {check}
 
 | {ubuntu} 18.04
 | {amd64}
-| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {amd64}
+| {check}
+
+| {ubuntu} 22.04
+| {amd64}
 | {check}
 
 |===
@@ -149,138 +125,123 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 [[uyuni.supported.clients]]
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1", options="header"]
 .Supported Client Systems
 |===
 
 | Operating System
 | Architecture
-| Traditional Clients
 | Salt Clients
-
-| {sle} 15
-| {x86_64}, {ppc64le}, {ibmz}, ARM
-| {check}
-| {check}
 
 | {sle} 12
 | {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
-| {check}
 
-| {sles} for SAP 15
-| {x86_64}, {ppc64le}
-| {check}
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
 | {check}
 
 | {sles} for SAP 12
 | {x86_64}, {ppc64le}
 | {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
 | {check}
 
 | {micro}
 | {x86_64}, {ppc64le}, {aarch64}
-| {cross}
 | {check}
 
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
-| {check}
 
-| {sles} ES 8
-| {x86_64}
-| {cross}
-| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sles} ES 7
+//| {x86_64}
+//| {check}
 
-| {sles} ES 7
-| {x86_64}
-| {check}
-| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sles} ES 8
+//| {x86_64}
+//| {check}
+
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sll} 9
+//| {x86_64}
+//| {check}
 
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {almalinux} 8
 | {x86_64}, {aarch64}
-| {cross}
+| {check}
+
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {amazon} 2
 | {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {centos} 8
-| {x86_64}, {ppc64le}, {aarch64}
-| {cross}
 | {check}
 
 | {centos} 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
+
+| {debian} 10
+| {x86_64}
 | {check}
 
 | {debian} 11
 | {x86_64}
-| {cross}
-| {check}
-
-| {debian} 10
-| {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {oracle} 8
-| {x86_64}, {aarch64}
-| {cross}
 | {check}
 
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
 | {check}
 
-| {rhel} 8
-| {x86_64}
-| {cross}
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {check}
 
 | {rhel} 7
 | {x86_64}
 | {check}
+
+| {rhel} 8
+| {x86_64}
 | {check}
 
-| {rocky} 9
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
-| {cross}
+| {rhel} 9
+| {x86_64}
 | {check}
 
 | {rocky} 8
 | {x86_64}, {aarch64}
-| {cross}
 | {check}
 
-| {ubuntu} 22.04
-| {amd64}
-| {cross}
-| {check}
-
-| {ubuntu} 20.04
-| {amd64}
-| {cross}
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
 | {check}
 
 | {ubuntu} 18.04
 | {amd64}
-| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {amd64}
+| {check}
+
+| {ubuntu} 22.04
+| {amd64}
 | {check}
 
 |===
