--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -7,10 +7,7 @@ ifeval::[{suma-content} == true]
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
 endif::[]
 
-This section contains information about using {redhat} update infrastructure (RHUI) to register traditional and Salt clients running {rhel} operating systems.
-
-Traditional clients are available on {rhel}{nbsp}7 only.
-{rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
+This section contains information about using {redhat} update infrastructure (RHUI) to register Salt clients running {rhel} operating systems.
 
 If you are running your clients in a public cloud, such as Amazon EC2, use this method.
 
@@ -200,7 +197,7 @@ ifeval::[{suma-content} == true]
 
 Your {susemgr} subscription entitles you to the tools channels for {sleses} (also known as {redhat} Expanded Support or RES).
 You must use the client tools channel to create the bootstrap repository.
-This procedure applies to both Salt and traditional clients.
+This procedure applies to Salt clients.
 endif::[]
 
 ifeval::[{suma-content} == true]
