--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -6,7 +6,7 @@ If you are already using PostgreSQL 14, you do not need to perform this migrati
 
 If you want to upgrade to the latest {productname} version, you must be using PostgreSQL version 13, 14, or 15 depending on the underlying operating system:
 
-* If you are running SLES 15 SP4, use PostgreSQL 14.
+* If you are running {sles} 15 SP4, use PostgreSQL 14.
 * If you are running {opensuse} Leap 15.4, use PostgreSQL 14.
 
 * If you are running SLES 15 SP5, use PostgreSQL 15.
