--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -9,7 +9,7 @@ If you want to upgrade to the latest {productname} version, you must be using P
 * If you are running {sles} 15 SP4, use PostgreSQL 14.
 * If you are running {opensuse} Leap 15.4, use PostgreSQL 14.
 
-* If you are running SLES 15 SP5, use PostgreSQL 15.
+* If you are running {sles} 15 SP5, use PostgreSQL 15.
 * If you are running {opensuse} Leap 15.5, use PostgreSQL 15.
 
 
