--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -208,7 +208,7 @@ Transactional updates in general support several reboot methods.
 It is recommended to use [systemitem]``systemd`` for rebooting in systems managed by {productname}.
 Using other methods can lead to undesired behavior.
 
-When bootstraping a transactional system on {productname}, [systemitem]``systemd`` will be configured as the reboot method ([literal]``REBOOT_METHOD``), if the system is in its default configuration.
+When bootstrapping a transactional system on {productname}, [systemitem]``systemd`` will be configured as the reboot method ([literal]``REBOOT_METHOD``), if the system is in its default configuration.
 Such a configuration allows {productname} to control the reboot action, and rebooting can be performed immediately or scheduled with {productname} as wanted.
 
 
