--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -197,3 +197,37 @@ mgr-create-bootstrap-repo
 ----
 
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
+
+
+
+[[clients-slemicro-reboot]]
+== Reboot {micro}
+
+{micro} is a transactional system.
+Transactional updates in general support several reboot methods.
+It is recommended to use [systemitem]``systemd`` for rebooting in systems managed by {productname}.
+Using other methods can lead to undesired behavior.
+
+When bootstrapping a transactional system on {productname}, [systemitem]``systemd`` will be configured as the reboot method ([literal]``REBOOT_METHOD``), if the system is in its default configuration.
+Such a configuration allows {productname} to control the reboot action, and rebooting can be performed immediately or scheduled with {productname} as wanted.
+
+
+=== Background Information
+
+By default, the reboot method during client installation is set to [option]``auto``.
+With the [option]``auto`` boot method, [command]``rebootmgrd`` will be used to reboot the system according to the configured policies if the service is running.
+Policies can be to reboot instantly or during a maintenance window.
+For more information, see the [command]``rebootmgrd``(8) man page.
+Otherwise if [command]``rebootmgrd`` is not running, {productname} will call [command]``systemctl reboot``.
+
+[[NOTE]]
+====
+Using any method different from [command]``systemd`` may cause undesired behavior.
+
+// 2023-05-23, ke: The rest is commented and the user will not see the
+//                 following remarks/background info:
+////
+Otherwise, the only thing Suma will be able to do is to ask for a reboot and it will be managed in the peculiarities of each reboot method. Not having control of when the reboot should happen, also takes away from Suma the ability to perform the reboot on its own maintenance windows, which is not the ideal configuration.
+
+The user must be able to change reboot method at any time and SUSE Manager will keep it. But in this case we should alert in the documentation that using any method different from systemd may cause undesired behavior.
+////
