--- a/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
@@ -1,5 +1,5 @@
-[[server-upgrade]]
-= Server - Upgrade
+[[server-minor-upgrade]]
+= Server - Minor Upgrade
 
 Several times a year, the {productname} team releases upgrades of the {productname} Server.
 These updates address bug fixes and feature improvements, and sometimes include new features.
