--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -100,7 +100,7 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 *** xref:server-intro-uyuni.adoc[Upgrade the Server]
-**** xref:server-upgrade-uyuni.adoc[Server - Upgrade]
+**** xref:server-minor-upgrade-uyuni.adoc[Server - Minor Upgrade]
 **** xref:server-major-upgrade-uyuni.adoc[Server - Major Upgrade]
 endif::[]
 
