--- a/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
@@ -1,7 +1,7 @@
 [[server-minor-upgrade]]
 = Server - Minor Upgrade
 
-Several times a year, the {productname} team releases upgrades of the {productname} Server.
+Several times a year, the {productname} team releases minor upgrades of the {productname} Server.
 These updates address bug fixes and feature improvements, and sometimes include new features.
 
 [IMPORTANT]
