--- a/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
@@ -9,7 +9,7 @@ These updates address bug fixes and feature improvements, and sometimes include 
 Some additional manual steps might be required, and this information is only available in the release notes.
 For more information about such a major upgrade, see xref:installation-and-upgrade:server-major-upgrade-uyuni.adoc[].
 
-For extra information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
+For information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
 ====
 
 Performing an upgrade is similar to installing operating system package updates.
