--- a/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-upgrade-uyuni.adoc
@@ -12,7 +12,7 @@ For more information about such a major upgrade, see xref:installation-and-upgra
 For information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
 ====
 
-Performing an upgrade is similar to installing operating system package updates.
+Performing a minor upgrade is similar to installing operating system package updates.
 
 .Procedure: Updating Packages on the {productname} Server
 
