Uyuni cosmetic wording change #16856 keichwa (#2258)

--- a/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -7,7 +7,9 @@ These updates address bug fixes and feature improvements, and sometimes include 
 [IMPORTANT]
 ====
 Some additional manual steps might be required, and this information is only available in the release notes.
-For important extra information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
+For more information about such a major upgrade, see xref:installation-and-upgrade:server-major-upgrade-uyuni.adoc[].
+
+For information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
 ====
 
 Performing a minor upgrade is similar to installing operating system package updates.
