use client register snippet
Convert known issue to a formal warning

--- a/modules/client-configuration/pages/clients-alibaba.adoc
+++ b/modules/client-configuration/pages/clients-alibaba.adoc
@@ -114,16 +114,16 @@ For more information on activation keys, see xref:client-configuration:activatio
 
 == Register Clients
 
-{alibabaclo} clients are registered in the same way as all other clients.
-
+[[WARNING]]
+====
 Some {alibabaclo}{nbsp}2 instances will fail to register on the first try.
-
 This is due to a to a known bug in the {alibabaclo}{nbsp}2 image.
+The `python-urlgrabber3` package is provided both as a Python pip package and an RPM package, which can cause a conflict on the first attempt to register.
 
-The `python-urlgrabber3` package is provided both as a Python pip package and 
-an RPM package, which can cause a conflict on the first attempt to register. 
+If your instance is based on one of the affected image versions, the client should register correctly on the second registration attempt.
+====
 
-If your instance is based on one of the affected image versions, the client 
-should register correctly on the second registration attempt.
+include::snippets/create_bootstrap_repo_register.adoc[]
 
-For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
+
+
