use client register snippet

--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -144,5 +144,4 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 == Register Clients
 
-{amazon} clients are registered in the same way as all other clients.
-For more information, see xref:client-configuration:registration-overview.adoc[].
+include::snippets/create_bootstrap_repo_register.adoc[]
