use client register snippet

--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -198,15 +198,6 @@ We recommend that you remove the line from the [path]``sudoers`` file after the 
 
 == Register Clients
 
-To register your {debian} clients, you need a bootstrap repository.
-By default, bootstrap repositories are regenerated daily.
-You can manually create the bootstrap repository from the command prompt, using this command:
 
-----
-mgr-create-bootstrap-repo
-----
+include::snippets/create_bootstrap_repo_register.adoc[]
 
-For {debian}{nbsp}10, select ``debian10-amd64-uyuni`` when prompted.
-
-
-For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
