use register snippet

--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -195,12 +195,10 @@ ol67-gpg-pubkey-72F97B74EC551F0A3.key
 
 == Register Clients
 
-{oracle} clients are registered in the same way as all other clients.
-For more information, see xref:client-configuration:registration-overview.adoc[].
-
-
 //[WARNING]
 //====
 //To register and use {oracle}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 //For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
 //====
+
+include::snippets/create_bootstrap_repo_register.adoc[]
