use register snippet

--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -472,19 +472,10 @@ For the complete list of the {redhat} product signing keys, see https://access.r
 
 == Register Clients
 
-To register your {redhat} clients, you need a bootstrap repository.
-By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, using this command:
-
-----
-mgr-create-bootstrap-repo
-----
-
-For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
-
-
 //[WARNING]
 //====
 //To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 //For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
 //====
+
+include::snippets/create_bootstrap_repo_register.adoc[]
