use Cobbler for iso images https://github.com/SUSE/spacewalk/issues/17309

--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -6,13 +6,8 @@ For clients that are not yet registered to {productname}, and if network boot ov
 One option to prepare such a removable medium is to use Cobbler.
 For information about using Cobbler to prepare an ISO image, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-cobbler[Build an ISO Image With Cobbler].
 
-The other option is to use mechanisms specific to the distribution:
-
-* For {suse} systems, prepare an ISO image using KIWI.
-  For information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-kiwi[Build a SUSE ISO Image With KIWI].
-
-* For {redhat} systems, use ``mkisofs``.
-  For information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-mkisofs[Build a RedHat ISO Image With mkisofs].
+For {suse} systems, it is often recommended to prepare an ISO image using KIWI.
+For information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-kiwi[Build a SUSE ISO Image With KIWI].
 
 In all cases, you use the resulting image to burn a CD-ROM or prepare a USB key.
 
@@ -65,6 +60,7 @@ If you cannot write an ISO image to a public [path]``tmp`` directory, check your
 ====
 
 
+
 [[build-iso-with-kiwi]]
 == Build a SUSE ISO Image With KIWI
 
@@ -82,6 +78,15 @@ we would love a bit more details - ebischoff
 For more information about KIWI, see http://doc.opensuse.org/projects/kiwi/doc/.
 
 
+
+[[build-iso-with-cobbler-rh]]
+== Build a RedHat ISO Image With Cobbler
+
+For more information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-cobbler[].
+
+
+
+////
 [[build-iso-with-mkisofs]]
 == Build a RedHat ISO Image With mkisofs
 
@@ -131,3 +136,4 @@ Note that [path]``isolinux/`` is the relative path to the directory containing t
   Alternatively prepare an USB key and insert it.
 . Boot the system and type [command]``ks`` at the prompt (if you left the label for the Kickstart boot as 'ks').
 . Press kbd:[Enter] to start {kickstart}.
+////
