Cleanup from comments, aligned formatting and empty lines.

--- a/modules/quickstart/nav-quickstart-guide.adoc
+++ b/modules/quickstart/nav-quickstart-guide.adoc
@@ -1,10 +1,11 @@
-
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Quick Start Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
 endif::[]
+
 
 * xref:quickstart-overview.adoc[Quick Start]
 
