--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -1,4 +1,4 @@
-// Reference Guide Antora Navigation List
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Reference Guide
 include::./branding/pdf/entities.adoc[]
@@ -197,6 +197,7 @@ endif::[]
 *** xref:cli-sync.adoc[Synchronization CLI Tools]
 *** xref:cli-bootstrap.adoc[Bootstrapping CLI Tools]
 *** xref:cli-smdba.adoc[Database CLI Tools]
+
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
