--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -1,4 +1,4 @@
-// Specialized Guides Antora Navigation List
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Specialized Guides
 include::./branding/pdf/entities.adoc[]
