--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -1,3 +1,4 @@
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Installation and Upgrade Guide
 include::./branding/pdf/entities.adoc[]
@@ -119,10 +120,6 @@ endif::[]
 *** xref:db-intro.adoc[Upgrade the Database]
 **** xref:db-migration-xy.adoc[Database Migration to Latest Version]
 *** xref:client-intro.adoc[Upgrade the Clients]
-
-ifdef::backend-pdf[]
-include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
-endif::[]
 
 
 ifdef::backend-pdf[]
