--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -1,4 +1,4 @@
-// Retail Guide Antora Navigation List
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Retail Guide
 include::./branding/pdf/entities.adoc[]
@@ -23,8 +23,8 @@ ifeval::[{uyuni-content} == true]
 *** xref:retail-uyuni-server-setup.adoc[Uyuni Retail Server Setup]
 *** xref:retail-uyuni-branchserver.adoc[Uyuni Retail Branch Server]
 endif::[]
-*** xref:retail-install-setup.adoc[Set Up Retail Environment]
 
+*** xref:retail-install-setup.adoc[Set Up Retail Environment]
 ** xref:retail-deploy-section.adoc[Deploying Terminals]
 *** xref:retail-deploy-terminals.adoc[Terminal Deployment Basics]
 *** xref:retail-deploy-terminals-other.adoc[USB and Wireless Deployments]
@@ -33,30 +33,27 @@ endif::[]
 *** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
-
 ** xref:retail-formulas-intro.adoc[Retail Formulas]
-
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-mass-config.adoc[Mass Configuration]
 *** xref:retail-mass-config-yaml.adoc[Mass Configuration YAML Example]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-admin-network.adoc[Network Administration]
-
 ** xref:retail-migration-intro.adoc[Retail Migration]
 
 ifeval::[{suma-content} == true]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
 *** xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]
 endif::[]
-*** xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]
 
+*** xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]
 ** xref:example-configurations.adoc[Example configurations]
 *** xref:dedicated-with-formulas.adoc[Dedicated terminal network configured using formulas]
 *** xref:dedicated-with-scripts.adoc[Dedicated terminal network configured using scripts]
 *** xref:shared-central-dns.adoc[Shared network with centralized DNS]
 *** xref:containerized-saltboot.adoc[Retail Environment using Containerized Proxy]
-
 ** xref:retail-next.adoc[What Next?]
+
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
