backport43 - Cleanup from comments, aligned formatting and empty lines.

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -1,11 +1,10 @@
-// Client Configuration Guide Antora Navivation List
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!`
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Client Configuration Guide
 include::./branding/pdf/entities.adoc[]
 :toc: left
 :toclevels: 4
 :doctype: book
-
 endif::[]
 
 
@@ -14,9 +13,11 @@ endif::[]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
 *** xref:supported-features-es.adoc[{sll} Supported Features]
+
 ifeval::[{uyuni-content} == true]
 *** xref:supported-features-alibaba.adoc[Alibaba Cloud Linux Supported Features]
 endif::[]
+
 *** xref:supported-features-almalinux.adoc[AlmaLinux Supported Features]
 *** xref:supported-features-amazon.adoc[Amazon Linux Supported Features]
 *** xref:supported-features-centos.adoc[CentOS Supported Features]
@@ -47,7 +48,6 @@ endif::[]
 **** xref:registration-cli.adoc[Register on the Command Line]
 *** xref:registration-overview-suse.adoc[SUSE Client Registration]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
-// SUSE Liberty Linux not available at Uyuni for now
 **** xref:clients-sleses.adoc[SUSE Liberty Linux Support Clients]
 **** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
@@ -57,6 +57,7 @@ ifeval::[{uyuni-content} == true]
 *** xref:registration-overview-alibaba.adoc[Alibaba Cloud Linux Client Registration]
 **** xref:clients-alibaba.adoc[Alibaba Cloud Linux Clients]
 endif::[]
+
 *** xref:registration-overview-almalinux.adoc[AlmaLinux Client Registration]
 **** xref:clients-almalinux.adoc[AlmaLinux Clients]
 *** xref:registration-overview-amazon.adoc[Amazon Linux Client Registration]
@@ -89,6 +90,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 *** xref:client-upgrades-uyuni.adoc[openSUSE Leap Minor Version Upgrade]
 endif::[]
+
 ** xref:delete-clients.adoc[Client Deletion]
 ** xref:client-operations.adoc[Client Operations]
 *** xref:package-management.adoc[Package Management]
@@ -119,6 +121,7 @@ endif::[]
 *** xref:vhm-nutanix.adoc[VHM and Nutanix]
 *** xref:vhm-vmware.adoc[VHM and VMWare]
 *** xref:vhm-file.adoc[VHM with Other Hosts]
+
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
