Fixed troubleshooting repository via proxy instructions.

--- a/modules/administration/pages/troubleshooting/tshoot-packages-proxy.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-packages-proxy.adoc
@@ -25,7 +25,8 @@ For a regular proxy, follow this procedure on the proxy machine:
 
 ----
 systemctl stop squid
-rm -rf /var/cache/squid
+rm -rf /var/cache/squid/*
+squid -z
 systemctl start squid
 ----
 
